--- a/_posts/2024-05-08-Chat-App.md
+++ b/_posts/2024-05-08-Chat-App.md
@@ -10,19 +10,16 @@ math: true
 mermaid: true
 otherProject: true
 image:
-  path: assets/img/PandaEngine/artificial-intelligence.jpg
+  path: assets/img/PandaEngine/chatapp.png
   lqip:
   alt: 
 ---
 
 ## Description
 
-Soft body using verlet integration.
+A full fledged chat application with authentication made using C++, protobufs, mySQL.
 
-### A caped ball moving on a rope bridge
+## Demo
 
-
-### A destructible flag
-
-![Alt Text](assets/img/PandaEngine/ai1.gif)
+{% include embed/youtube.html id='9cq5Zf6IT1k' %}
 
