--- a/_posts/2024-05-08-Robotron.md
+++ b/_posts/2024-05-08-Robotron.md
@@ -10,19 +10,18 @@ math: true
 mermaid: true
 otherProject: true
 image:
-  path: assets/img/PandaEngine/artificial-intelligence.jpg
+  path: assets/img/PandaEngine/robotron.png
   lqip:
   alt: 
 ---
 
 ## Description
 
-Soft body using verlet integration.
+A robotron 2084 port made using C++, OpenGL. A precursor engine of Panda Engine.
 
-### A caped ball moving on a rope bridge
+Player is the hero and needs to rescue the 4 family members while defeating the enemies.
 
+## Gameplay
 
-### A destructible flag
-
-![Alt Text](assets/img/PandaEngine/ai1.gif)
+![Alt Text](assets/img/PandaEngine/robotron.gif)
 
