--- a/_posts/2024-05-08-SoftBody.md
+++ b/_posts/2024-05-08-SoftBody.md
@@ -10,7 +10,7 @@ math: true
 mermaid: true
 otherProject: true
 image:
-  path: assets/img/PandaEngine/artificial-intelligence.jpg
+  path: assets/img/PandaEngine/softbody.png
   lqip:
   alt: 
 ---
@@ -21,8 +21,9 @@ Soft body using verlet integration.
 
 ### A caped ball moving on a rope bridge
 
+![Alt Text](assets/img/PandaEngine/rope-bridge.gif)
 
 ### A destructible flag
 
-![Alt Text](assets/img/PandaEngine/ai1.gif)
+![Alt Text](assets/img/PandaEngine/flag.gif)
 
